[tool.poetry]
name = "yarl"
version = "0.1.4"
description = ""
authors = ["Malay Agarwal <malay.agarwal261016@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tcod = "^15.0.1"
numpy = "^1.24.2"
pyinstaller = "^5.10.1"
python-logstash-async = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.3.0"
pytest-cov = "^4.0.0"
mypy = "^1.2.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=yarl/ --cov-report=xml:./coverage.xml --cov-report term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
packages = ["yarl"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
