[tool.poetry]
name = "yarl"
version = "1.1.0"
description = ""
authors = ["Malay Agarwal <malay.agarwal261016@outlook.com>"]
readme = "README.md"
packages = [
    { include = "yarl", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tcod = "^15.0.1"
numpy = "^1.24.2"
pyinstaller = "^5.10.1"
python-logstash-async = "^2.5.0"
python-dotenv = "^1.0.0"
pillow = "^9.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.3.0"
pytest-cov = "^4.0.0"
mypy = "^1.2.0"
types-pillow = "^9.5.0.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.8"
mkdocstrings = {extras = ["python"], version = "^0.21.2"}
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-section-index = "^0.3.5"
pillow = "^9.5.0"
cairosvg = "^2.7.0"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=src/yarl/ --cov-report=xml:./coverage.xml --cov-report term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
